--- a/SpaceGame/SpaceGame/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame/SpaceGame/SpaceGame.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Misc\ScoreEngine.cs" />
+    <Compile Include="Misc\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
