--- a/SpaceGame/SpaceGame/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame/SpaceGame/SpaceGame.csproj
@@ -107,8 +107,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameState.cs" />
     <Compile Include="Models\ModelManager.cs" />
     <Compile Include="Models\Projectile.cs" />
+    <Compile Include="Particles\ParticleExplosion.cs" />
+    <Compile Include="Particles\ParticlesBackground.cs" />
     <Compile Include="Player\Camera.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Levels\LevelManager.cs" />
@@ -116,14 +119,11 @@
     <Compile Include="Models\Asteroid.cs" />
     <Compile Include="Models\BasicEnemy.cs" />
     <Compile Include="Models\BasicModel.cs" />
-    <Compile Include="Particles\ParticleEngine.cs" />
-    <Compile Include="Particles\ParticleGenerator.cs" />
     <Compile Include="Particles\ParticleSettings.cs" />
     <Compile Include="Player\PlayerShip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Misc\ScoreEngine.cs" />
     <Compile Include="Misc\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
